changed texts and picture

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Sreesankar</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -160,7 +160,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                        <a class="portfolio-box" href="" title="Project Name">
                             <img class="img-fluid" src="https://steelsupplements.com/cdn/shop/articles/shutterstock_1390590884_1000x.jpg?v=1633774338" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Body Composition</div>
@@ -169,7 +169,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Chris Jubin">
+                        <a class="portfolio-box" href="" title="Chris Jubin">
                             <img class="img-fluid" src="https://static.vecteezy.com/system/resources/previews/015/591/014/large_2x/woman-doing-flatfoot-correction-gymnastic-exercise-using-massage-roller-myofascial-relaxation-of-foot-muscles-hallux-valgus-pain-identification-of-flat-feet-self-care-practices-at-home-health-photo.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Rehab</div>
@@ -194,8 +194,8 @@
             </div>
             <div class="row justify-content-center align-items-center p-5">
                 <div  class="col-lg-6 client">
-                    <h3>Tharun Thomas Eapen</h3>
-                    <p>Tharun started his rehab journey with me back in 2021.He was able to attain full recovery in six months.He had undergone ACL reconstruction surgery after getting injued while playing football.Apaet from being a software engineer he is a skilled footballer.When he approached me his goal was to get back in the field. The training was quite a challege for me but which is what made it fun. Every day was an opprotutnity to learn new things and try new things. There was a significant difference in the muscle mass of his two legs. his dominant leg had lost a lot of muscle during the rest period.The firt focus was to gain those lost muscles back. Which was an opportunity for m to try Isolation squats.I had to increase the load in the weaker leg while not over loading it but also progressively overload it.In a matter of 3 months Tharun was doing single legged squats with the weak leg.Then we started working on agility adn balance.Tharuns effort was commendable. the workout nature had turnned in to an athletes program froim a rehabilitation program by then.He gained back his abity to run and change directions at full speed.Then it was time to get into sports oriented training, I got an opportunity to explore how footballers train, different methodologies adopted to increase one's performance. When it cane to football agility played a great role considering his injury as well.Eventualy by the end of 5th month we were on the field.But for tharun overcoming the mind-block was yet another task. But he did it. His journey was truly inspiring</p>
+                    <h3>Shahansha</h3>
+                    <p>Shahasha started his martial arta journey with me back in 2021.He was able to attain full recovery in six months.He had undergone ACL reconstruction surgery after getting injued while playing football.Apaet from being a software engineer he is a skilled footballer.When he approached me his goal was to get back in the field. The training was quite a challege Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur blanditiis doloribus deserunt nisi distinctio aut incidunt, error, dignissimos pariatur ullam dicta! Aliquid esse commodi soluta ex error fuga quaerat distinctio.lorem50. the workout nature had turnned in to an athletes program froim a rehabilitation program by then.He gained back his abity to run and change directions at full speed.Then it was time to get into sports oriented training, I got an opportunity to explore how footballers train, different methodologies adopted to increase one's performance. When it cane to football agility played a great role considering his injury as well.Eventualy by the end of 5th month we were on the field.But for tharun overcoming the mind-block was yet another task. But he did it. His journey was truly inspiring</p>
                 </div>
                 <div class="col-lg-6 d-flex justify-content-center">
                     <img width="80%" src="https://media.licdn.com/dms/image/v2/D5603AQGuWIuEiF6Xrw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1674431087025?e=1730332800&v=beta&t=-7zi7DNtVGJyzVGClV1O0PoAXulmH-J0wV19nHFDha4" alt="">
@@ -206,8 +206,12 @@
                     <img width="80%" src="https://media.licdn.com/dms/image/v2/D5603AQGuWIuEiF6Xrw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1674431087025?e=1730332800&v=beta&t=-7zi7DNtVGJyzVGClV1O0PoAXulmH-J0wV19nHFDha4" alt="">
                 </div>
                 <div  class="col-lg-6 client">
-                    <h3>Tharun Thomas Eapen</h3>
-                    <p>Tharun started his rehab journey with me back in 2021.He was able to attain full recovery in six months.He had undergone ACL reconstruction surgery after getting injued while playing football.Apaet from being a software engineer he is a skilled footballer.When he approached me his goal was to get back in the field. The training was quite a challege for me but which is what made it fun. Every day was an opprotutnity to learn new things and try new things. There was a significant difference in the muscle mass of his two legs. his dominant leg had lost a lot of muscle during the rest period.The firt focus was to gain those lost muscles back. Which was an opportunity for m to try Isolation squats.I had to increase the load in the weaker leg while not over loading it but also progressively overload it.In a matter of 3 months Tharun was doing single legged squats with the weak leg.Then we started working on agility adn balance.Tharuns effort was commendable. the workout nature had turnned in to an athletes program froim a rehabilitation program by then.He gained back his abity to run and change directions at full speed.Then it was time to get into sports oriented training, I got an opportunity to explore how footballers train, different methodologies adopted to increase one's performance. When it cane to football agility played a great role considering his injury as well.Eventualy by the end of 5th month we were on the field.But for tharun overcoming the mind-block was yet another task. But he did it. His journey was truly inspiring</p>
+                    <h3>Chris Jubin</h3>
+                    <p>Chris started training kickboxing under my headcoach when he was 7 years of age. He is the champion now.I am in charge of his streangth and conditioning. Chris used to feeel pain in his knee durinhg the trainig in the earlier mid stages, which was caused by his flate feet, his flat feet resulted in fromation if a ganglion cyct. I was tasked with improving his footwork by dealing with his flat feet. There are many sources out there that gives us excersises fro flat feet but, you cant find proof for results.
+                        <br>
+                        <br>
+                        I started by observing muscles in his feet. which if the musckles get activated if he want to stay on his toes?My training schedule originated from this question, i found out same musckles were strained when he flexed his big toe.So I devised a training which resembled thay of how ballerinas train their feet. We were able to develop his claf muscles and his thigh muscles son thaty he will be able to stand and fight on his toes even with his flat feet. But innthe process we were able to develop an arch in his flat feet. which no nolger made it a flat feet.
+                    </p>
                 </div>
             </div>
         </div>
